# C6Pro

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: eval.cpp  eval.h  game.cpp  game.h  node.cpp  node.h  nodetable.h  parameter.h  search.cpp  search.h  searchparam.h  thread.cpp  thread.h  utils.cpp  utils.h
src/evaluator/: dummy.cpp  dummy.h  factory.cpp  factory.h  mix9svqnnue.cpp  mix9svqnnue.h  simdops.h  weightloader.h
test/: test_eval.cpp  test_state.cpp
